<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,NotSibling">

        <EditText
            android:id="@+id/editTextURL"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:background="@drawable/addresbar_design"
            android:fontFamily="@font/light"
            android:gravity="left|top"
            android:hint="@string/address_hint"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="text"
            android:paddingVertical="8dp"
            android:paddingStart="8dp"
            android:textColor="@color/search_black"
            android:textColorHint="@color/search_black"
            android:selectAllOnFocus="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="LabelFor,MissingConstraints,RtlHardcoded,RtlSymmetry,SpeakableTextPresentCheck,TextFields" />


        <ImageButton
            android:id="@+id/searchButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginStart="4dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/partsdesign"
            android:contentDescription="@string/search_button_name"
            android:padding="12dp"
            android:scaleType="fitXY"
            app:layout_constraintStart_toEndOf="@+id/editTextURL"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/search" />

        <ImageButton
            android:id="@+id/menuButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/partsdesign"
            android:contentDescription="@string/menu_button_name"
            android:padding="12dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/option" />
    </LinearLayout>

    <WebView
        android:id="@+id/webview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:isScrollContainer="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>